@@ -3,7 +3,7 @@
  * PERFDATA.H - Include file for performance data routines
  *
  * Copyright (c) 2001-2005 Ethan Galstad (nagios@nagios.org)
- * Last Modified:   05-22-2005
+ * Last Modified:   11-25-2005
  *
  * License:
  *
@@ -27,13 +27,18 @@
 
 #include "objects.h"
 
+#ifdef __cplusplus
+  extern "C" {
+#endif
+
 int initialize_performance_data(char *);	                /* initializes performance data */
 int cleanup_performance_data(char *);                           /* cleans up performance data */
 
 int update_host_performance_data(host *);       	        /* updates host performance data */
 int update_service_performance_data(service *);         	/* updates service performance data */
 
-
+#ifdef __cplusplus
+  }
 #endif
 
-
+#endif
