@@ -2,8 +2,8 @@
  *
  * SRETENTION.H - Header for state retention routines
  *
- * Copyright (c) 1999-2003 Ethan Galstad (nagios@nagios.org)
- * Last Modified:   02-12-2003
+ * Copyright (c) 1999-2005 Ethan Galstad (nagios@nagios.org)
+ * Last Modified:   11-25-2005
  *
  * License:
  *
@@ -22,7 +22,13 @@
  *
  *****************************************************************************/
 
+#ifdef __cplusplus
+  extern "C" {
+#endif
 
 int save_state_information(char *,int);            /* saves all host and state information */
 int read_initial_state_information(char *);        /* reads in initial host and state information */
 
+#ifdef __cplusplus
+  }
+#endif
